src/test/ui/resolve/unboxed-closure-sugar-nonexistent-trait.stderr
error[E0405]: cannot find trait `Nonexist` in this scope
  --> $DIR/unboxed-closure-sugar-nonexistent-trait.rs:11:8
   |
11 | fn f<F:Nonexist(isize) -> isize>(x: F) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0404]: expected trait, found type alias `Typedef`
  --> $DIR/unboxed-closure-sugar-nonexistent-trait.rs:17:8
   |
17 | fn g<F:Typedef(isize) -> isize>(x: F) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^ type aliases cannot be used for traits

error: cannot continue compilation due to previous error

